add contact fine tuning

--- a/contacts.html
+++ b/contacts.html
@@ -99,7 +99,7 @@
                                 oninput="this.setCustomValidity('')" required>
 
 
-                            <div class="d-flex textHorizontal addContactButtonContainer">
+                            <div class="d-flex textHorizontal addContactButtonContainer fontSize20">
                                 <button class="button outline-btn"
                                     onclick="slideOut('contact_popup', 'contact_popup_section', 200)"
                                     id="cancelBtnMobileId">
@@ -114,9 +114,9 @@
                                     </svg>
                                 </button>
                                 <button class="button blue-btn">
-                                    <spline>
-                                        <b id="textChangeToSaveId">Create contact</b>
-                                    </spline>
+                                    <!-- <spline> -->
+                                        <span id="textChangeToSaveId">Create contact</span>
+                                    <!-- </spline> -->
                                     <img src="./img/check.svg">
                                 </button>
                             </div>
