--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="sign-up-mobile">
         <span>Not a Join user?</span>
-        <button onclick="loadRegister()" type="button" class="button blue-btn">Sign up</button>
+        <button onclick="loadRegister()" type="button" class="button blue-btn fontSize16">Sign up</button>
     </div>
 
     <div class="police">
