--- a/contacts.html
+++ b/contacts.html
@@ -55,8 +55,14 @@
 
             <section class="addContactBackground horicontalAndVertical d-none" id="contact_popup_section"
                 onclick="slideOut('contact_popup', 'contact_popup_section', 200)">
+
                 <div class="addContactPopup d-flex" onclick="doNotClose(event)" id="contact_popup">
+
                     <div class="leftSideAddContactPopup">
+                        <div id="close_popup_mobile" class="pointer"
+                            onclick="slideOut('contact_popup', 'contact_popup_section', 200)">
+                           <img src="./img/close-white-mobile.png" alt="">
+                        </div>
                         <div class="addContactLeftText">
                             <img src="./img/join.logo-white.svg" id="join_logo_add_contact">
                             <spline class="fontSize61"><b id="textChangeToEditContactId">Add contact</b></spline>
@@ -65,6 +71,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="center-popup">
                         <div id="profile_img"></div>
                         <div id="no_profile_img">
@@ -74,7 +81,7 @@
                     </div>
 
                     <div class="rightSidePopup d-flex">
-                        <div class="closePopupCross pointer horicontalAndVertical"
+                        <!-- <div class="closePopupCross pointer horicontalAndVertical"
                             onclick="slideOut('contact_popup', 'contact_popup_section', 200)">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
@@ -88,7 +95,7 @@
                                         fill="#2A3647" />
                                 </g>
                             </svg>
-                        </div>
+                        </div> -->
                         <form class="contactInfo" onsubmit="createContact(); return false;" id="contact_form">
 
                             <input type="text" placeholder="Name" id="inputNameId" class="fontSize20" required>
