--- a/addTask.html
+++ b/addTask.html
@@ -157,12 +157,12 @@
                                 </svg>
                             </button>
                             <button type="submit" class="createBtn blueBtn fontSize20">Create contact<img
-                                    class="createImg" src="./img/check.svg"></button>
+                                    class="createImg" src="./img/check-white.svg"></button>
                         </div>
                     </form>
                 </div>
             </div>
-            <img onclick="clearContactPopup()" class="closePopup" src="img/closeGrey.svg">
+            <img onclick="clearContactPopup()" class="closePopup" src="img/close-white.svg">
             <img onclick="clearContactPopup()" class="closePopupBlue" src="img/crossAddTask.svg">
         </div>
     </section>
@@ -179,7 +179,7 @@
             </div>
             <div class="addContactPopupBoxRight">
                 <div class="addContactPopupBoxRightImgPosition">
-                    <img class="addCategoryPopupBoxRightImg" src="./img/addTaskCategory.svg">
+                    <img class="addCategoryPopupBoxRightImg" src="./img/add-task-category.svg">
                 </div>
                 <div class="addContactPopupBoxRightFormPosition">
                     <div class="custom-select">
@@ -198,12 +198,12 @@
                                 </svg>
                             </button>
                             <button onclick="confirmCreateCategory()" class="createBtn blueBtn">Create category<img
-                                    class="createImg" src="./img/check.svg"></button>
+                                    class="createImg" src="./img/check-white.svg"></button>
                         </div>
                     </div>
                 </div>
             </div>
-            <img onclick="stopCreateCategory()" class="closePopup" src="img/closeGrey.svg">
+            <img onclick="stopCreateCategory()" class="closePopup" src="img/close-white.svg">
             <img onclick="stopCreateCategory()" class="closePopupBlue" src="img/crossAddTask.svg">
         </div>
     </section>
