--- a/contacts.html
+++ b/contacts.html
@@ -61,7 +61,7 @@
                     <div class="leftSideAddContactPopup">
                         <div id="close_popup_mobile" class="pointer"
                             onclick="slideOut('contact_popup', 'contact_popup_section', 200)">
-                            <img src="./img/close-white-mobile.png" alt="">
+                            <img src="./img/close-white.svg" alt="">
                         </div>
                         <div class="addContactLeftText">
                             <img src="./img/join.logo-white.svg" id="join_logo_add_contact">
@@ -102,7 +102,7 @@
                                     id="cancelBtnMobileId">
                                     <spline id="editCancelButtonId">Cancel</spline>
 
-                                    <svg class="colorOnHover" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+                                    <svg class="colorOnHover" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                         viewBox="0 0 24 25" fill="none">
                                         <path
                                             d="M12.001 12.5001L17.244 17.7431M6.758 17.7431L12.001 12.5001L6.758 17.7431ZM17.244 7.25708L12 12.5001L17.244 7.25708ZM12 12.5001L6.758 7.25708L12 12.5001Z"
@@ -114,7 +114,7 @@
                                     <!-- <spline> -->
                                     <span id="textChangeToSaveId">Create contact</span>
                                     <!-- </spline> -->
-                                    <img src="./img/check.svg">
+                                    <img src="./img/check-white.svg">
                                 </button>
                             </div>
 
