--- a/addTask.html
+++ b/addTask.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style/addTask.css">
     <link rel="stylesheet" href="style/addTask_media_query.css">
     <link rel="stylesheet" href="style/fonts.css">
-    <link rel="shortcut icon" href="img/Logo for Favicon construction.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="templates/header_sidebar.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
@@ -100,7 +100,7 @@
                                     <input type="text" class="click" placeholder="Add new subtask"
                                         id="subTaskSelectInput">
                                     <img onclick="addSubTaskToCollection()" class="inputAbsolut"
-                                        src="img/plusAddTask.svg">
+                                        src="img/plus.svg">
                                 </div>
                                 <div class="selectedSubTask show-scrollbar" id="selectedSubTaskContainer">
                                 </div>
@@ -119,7 +119,7 @@
         <div class="addContactPopupBox">
             <div class="addContactPopupBoxLeft">
                 <div class="addContactPopupBoxLeftPosition">
-                    <img class="logoContactPopup" src="./img/join.logo-white.svg">
+                    <img class="logoContactPopup" src="./img/join-logo-white.svg">
                     <spline class="addContactPopupBoxLeftHeadline"><b>Add contact</b>
                     </spline>
                     <spline class="addContactPopupBoxLeftText">Tasks are better with a team!</spline>
@@ -163,14 +163,14 @@
                 </div>
             </div>
             <img onclick="clearContactPopup()" class="closePopup" src="img/close-white.svg">
-            <img onclick="clearContactPopup()" class="closePopupBlue" src="img/crossAddTask.svg">
+            <img onclick="clearContactPopup()" class="closePopupBlue" src="img/close.svg">
         </div>
     </section>
     <section id="createCategoryPopupByAddTask" class="popupContainer d-none">
         <div class="addContactPopupBox">
             <div class="addContactPopupBoxLeft">
                 <div class="addContactPopupBoxLeftPosition">
-                    <img class="logoContactPopup" src="./img/join.logo-white.svg">
+                    <img class="logoContactPopup" src="./img/join-logo-white.svg">
                     <spline class="addContactPopupBoxLeftHeadline"><b>Add new category</b>
                     </spline>
                     <spline class="addContactPopupBoxLeftText">Tasks are better with a category!</spline>
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <img onclick="stopCreateCategory()" class="closePopup" src="img/close-white.svg">
-            <img onclick="stopCreateCategory()" class="closePopupBlue" src="img/crossAddTask.svg">
+            <img onclick="stopCreateCategory()" class="closePopupBlue" src="img/close.svg">
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
