--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <link rel="shortcut icon" href="img/Logo for Favicon construction.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <!-- sidebar and header -->
     <link rel="stylesheet" href="templates/header_sidebar.css">
     <link rel="stylesheet" href="style/style.css">
@@ -44,7 +44,7 @@
                     <button type="button" class="button blue-btn fontSize20"
                         onclick="openAddContactWindow(), slide('contact_popup', 'contact_popup_section')">
                         Add new Contact
-                        <img src="./img/person_add.svg">
+                        <img src="./img/person-add.svg">
                     </button>
                 </div>
                 <div class="scrollingContainer">
@@ -64,7 +64,7 @@
                             <img src="./img/close-white.svg" alt="">
                         </div>
                         <div class="addContactLeftText">
-                            <img src="./img/join.logo-white.svg" id="join_logo_add_contact">
+                            <img src="./img/join-logo-white.svg" id="join_logo_add_contact">
                             <spline class="fontSize61"><b id="textChangeToEditContactId">Add contact</b></spline>
                             <spline class="fontSize27 textUnderAddContactTitle" id="add_contact_underline">Tasks are
                                 better with a team!</spline>
@@ -76,7 +76,7 @@
                     <div class="center-popup">
                         <div id="profile_img"></div>
                         <div id="no_profile_img">
-                            <img class="circle" src="./img/Group 9.svg">
+                            <img class="circle" src="./img/circle.svg">
                             <img class="personInCircle" src="./img/person.svg">
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                 <div class="mobileAddContact horicontalAndVertical pointer"
                     onclick="openAddContactWindow(), slide('contact_popup', 'contact_popup_section')"
                     id="mobile_add_contact_button">
-                    <img src="./img/person_add.svg">
+                    <img src="./img/person-add.svg">
                 </div>
             </section>
 
