--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@
     <script defer src="templates/templates.js"></script>
 
     <link rel="stylesheet" href="style/fonts.css">
-    <link rel="shortcut icon" href="img/Logo for Favicon construction.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/legalNotice.css">
     <link rel="stylesheet" href="templates/header_sidebar.css">
