--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/log-in.css">
     <link rel="stylesheet" href="style/fonts.css">
-    <link rel="shortcut icon" href="img/Logo for Favicon construction.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
 
     <script defer src="script/saveAndLoad.js"></script>
     <script defer src="script/addTask.js"></script>
@@ -25,7 +25,7 @@
 <body onload="initLogin()">
 
     <div class="join-logo-contain d-none">
-        <img class="join-logo" src="img/Logo for Favicon construction.svg" alt="">
+        <img class="join-logo" src="img/favicon.svg" alt="">
     </div>
 
     <header>
