--- a/privacy-police.html
+++ b/privacy-police.html
@@ -9,7 +9,7 @@
     <script defer src="templates/templates.js"></script>
     <script defer src="script/saveAndLoad.js"></script>
     <link rel="stylesheet" href="templates/header_sidebar.css">
-    <link rel="shortcut icon" href="img/Logo for Favicon construction.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="style/help.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
