--- a/summary.html
+++ b/summary.html
@@ -79,7 +79,7 @@
                             <a href="board.html" class="data-panel-big">
                                 <div class="urgent">
                                     <div class="data-panel-big-background">
-                                        <img class="data-panel-big-img" src="./img/PrioUrgentWhite.svg">
+                                        <img class="data-panel-big-img" src="./img/prioUrgentWhite.svg">
                                     </div>
                                     <div class="urgent-container">
                                         <div id="urgent" class="fontSize64">0</div><span
