changed close x in contact card

--- a/contacts.html
+++ b/contacts.html
@@ -86,7 +86,7 @@
                         <form class="contactInfo" onsubmit="createContact(); return false;" id="contact_form">
                             <div id="close_popup" class="pointer"
                                 onclick="slideOut('contact_popup', 'contact_popup_section', 200)">
-                                <img src="./img/close.png" alt="">
+                                <img src="./img/close.svg" alt="">
                             </div>
                             <input type="text" placeholder="Name" id="inputNameId" class="fontSize20" required>
                             <input type="email" placeholder="Email" id="inputEmailId" class="fontSize20" required>
