css class renaming finished

--- a/addTask.html
+++ b/addTask.html
@@ -209,7 +209,7 @@
     </section>
     <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
 
-    <section class="successfullyBtn horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
+    <section class="success-info horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
         Contact succesfully created
     </section>
 </body>
