--- a/board.html
+++ b/board.html
@@ -306,7 +306,7 @@
             <img onclick="stopCreateCategory()" class="closePopupBlue" src="img/close.svg">
         </div>
     </section>
-    <section class="successfullyBtn horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
+    <section class="success-info horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
         Contact succesfully created
     </section>
     <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
