--- a/legalNotice.html
+++ b/legalNotice.html
@@ -126,7 +126,7 @@
         </div>
     </div>
 
-    <div class="emptyContainer" id="emptyContainer"></div>
+    <!-- <div class="emptyContainer" id="emptyContainer"></div> -->
 </body>
 
 </html>
