--- a/privacy-police.html
+++ b/privacy-police.html
@@ -82,7 +82,7 @@
             <img src="./img/arror-left.svg">
         </div>
     </div>
-    <div class="emptyContainer" id="emptyContainer"></div>
+    <!-- <div class="emptyContainer" id="emptyContainer"></div> -->
 
 </body>
 
