changed file names

--- a/board.html
+++ b/board.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board</title>
     <link rel="stylesheet" href="style/fonts.css">
-    <link rel="stylesheet" href="style/addTask.css">
+    <link rel="stylesheet" href="style/task.css">
     <link rel="stylesheet" href="style/addTask_media_query.css">
     <link rel="stylesheet" href="templates/header_sidebar.css">
     <link rel="stylesheet" href="./style/style.css">
@@ -18,11 +18,11 @@
     <script src="./script/saveAndLoad.js"></script>
     <script src="script/contacts.js"></script>
     <script defer src="templates/templates.js"></script>
-    <script defer src="script/addTask.js"></script>
+    <script defer src="script/task.js"></script>
     <script defer src="script/addTask-templates.js"></script>
     <script defer src="script/board-addTask-teamfunctions.js"></script>
     <script defer src="./script/board.js"></script>
-    <script defer src="./script/board-task-detail.js"></script>
+    <script defer src="./script/board-openTask.js"></script>
 </head>
 
 
