--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
     <link rel="stylesheet" href="style/animation.css">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/log-in.css">
+    <link rel="stylesheet" href="style/login.css">
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
 
     <script defer src="script/saveAndLoad.js"></script>
-    <script defer src="script/addTask.js"></script>
+    <script defer src="script/task.js"></script>
     <script defer src="script/contacts.js"></script>
     <script defer src="script/register.js"></script>
-    <script defer src="script/log-in.js"></script>
+    <script defer src="script/login.js"></script>
 
 </head>
 
