--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/register.css">
     <link rel="stylesheet" href="style/help.css">
     <link rel="stylesheet" href="style/fonts.css">
-    <link rel="stylesheet" href="style/log-in.css">
+    <link rel="stylesheet" href="style/login.css">
     <script src="script/contacts.js"></script>
     <script defer src="script/register.js"></script>
     <script defer src="./templates/templates.js"></script>
